@@ -1,3 +1,8 @@
+2010-02-11  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclIOCmd.c (Tcl_OpenObjCmd): [Bug 2949740]: Make sure that
+	we do not try to put a NULL pipeline channel into binary mode.
+
 2010-02-09  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	[Bug 2826551, Patch 2948425]: Assorted regexp bugs related to -all,
